--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/ExtendedCaseApi/**
 dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Logs/
 
 dhHelpdeskNG/.vs/
+dhHelpdeskMobile/.vs/
