--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Extensions\Object\ObjectExtension.cs" />
     <Compile Include="Extensions\String\SplitExtension.cs" />
     <Compile Include="Extensions\String\StringExtension.cs" />
+    <Compile Include="ICacheService.cs" />
     <Compile Include="Logger\ILoggerService.cs" />
     <Compile Include="Logger\IStartUpTask.cs" />
     <Compile Include="Logger\Log4NetLoggerService.cs" />
