--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -93,9 +93,10 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="false"/>
     <security>
-        <requestFiltering allowDoubleEscaping="true" />
+      <requestFiltering allowDoubleEscaping="true">
         <!-- for iis 7 >. 50 mb in bytes -->
-        <requestLimits maxAllowedContentLength="5242880"/>
+        <requestLimits maxAllowedContentLength="5242880" />
+      </requestFiltering>
     </security>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
