--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -4110,6 +4110,7 @@
     <Content Include="Views\Notifiers\NewCategory.cshtml" />
     <Content Include="Web.config.template">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Notifiers\_Details.cshtml" />
     <Content Include="Views\Notifiers\NotifierPopup.cshtml" />
