--- a/ExtendedCase/ExtendedCase.WebComponent/package.json
+++ b/ExtendedCase/ExtendedCase.WebComponent/package.json
@@ -15,7 +15,7 @@
     "css-to-string-loader": "^0.1.3",
     "cssnano": "^4.1.10",
     "del": "^2.2.2",
-    "file-loader": "^2.0.0",
+    "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "merge": "^1.2.0",
@@ -83,9 +83,9 @@
     "installDependencies": "npm install",
     "stats": "webpack-bundle-analyzer dist/stats.json",
     "build-test": "webpack --env.mode=test",
-    "build-test-mobile": "webpack --env.mode=test-mobile --verbose",
-    "build-test-local": "webpack --env.mode=dev.test --verbose",
-    "build-dev": "webpack --env.mode=dev --verbose",
+    "build-test-mobile": "webpack --env.mode=test-mobile",
+    "build-test-local": "webpack --env.mode=dev.test",
+    "build-dev": "webpack --env.mode=dev",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json -m static"
   }
 }
