--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -90,9 +90,9 @@
     <add key="ConfirmMsgAfterCaseRegistration" value="true" />
     <add key="CaseList" value="coworkers" />
     <!-- "SelfService", "LineManager" -->
-    <add key="CurrentApplication" value="LineManager" />
-
-	<add key="ShowCommunicationForSelfService" value="false" />
+    <add key="CurrentApplication" value="SelfService" />
+    <!-- Chat = true-->
+	<add key="ShowCommunicationForSelfService" value="true" />
 
     <!-- Single Sign Keys-->
     <add key="ApplicationId" value="Line Manager" />
@@ -115,6 +115,7 @@
     <add key="SSO.EnableSlidingExpiration" value="true" />
     <add key="SSO.HandleSecurityTokenExceptions" value="true" />
     <add key="SSO.LogoutCustomerOnSessionExpire" value="false" />
+	  <!-- 6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh -->
     <add key="reCaptchaSiteKey" value="6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh" />
     <add key="reCaptchaSecretKey" value="6Lem1d4ZAAAAACGdIZQDHvCq4CcuKLXGe9UhC-fZ" />
     
