--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -12,6 +12,9 @@
     <add key="LogFolder" value="" /> <!--Example: C:\temp-->
     <add key="LogIdentifier" value="" /> <!-- -->
     <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
+	<add key="DefaultSmtpServer" value="" /><!--smtp.datahalland.se -->
+	<add key="ErrorMailFrom" value="testhelpdesk@dhsolutions.se" />
+	<add key="ErrorMailTo" value="katarina.ask@dhsolutions.se" />
     
     <!-- Optional diagnostic parameters      
     <add key="customersFilter" value="1" />
