--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -12,7 +12,7 @@
     <add key="LogFolder" value="" /> <!--Example: C:\temp-->
     <add key="LogIdentifier" value="" /> <!-- -->
     <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
-	<add key="DefaultSmtpServer" value="" /><!--smtp.datahalland.se -->
+	<add key="DefaultSmtpServer" value="smtp.datahalland.se" /><!--smtp.datahalland.se -->
 	<add key="ErrorMailFrom" value="testhelpdesk@dhsolutions.se" />
 	<add key="ErrorMailTo" value="katarina.ask@dhsolutions.se" />
     
