--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -13,8 +13,8 @@
     <add key="LogIdentifier" value="" /> <!-- -->
     <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
 	<add key="DefaultSmtpServer" value="" /><!--smtp.datahalland.se -->
-	<add key="ErrorMailFrom" value="testhelpdesk@dhsolutions.se" />
-	<add key="ErrorMailTo" value="katarina.ask@dhsolutions.se" />
+	<add key="ErrorMailFrom" value="" />
+	<add key="ErrorMailTo" value="" />
     
     <!-- Optional diagnostic parameters      
     <add key="customersFilter" value="1" />
