--- a/Mail2Ticket.yml
+++ b/Mail2Ticket.yml
@@ -17,6 +17,12 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/DH.Helpdesk.Mail2Ticket.vbproj'
+    feedsToUse: 'select'
 - task: VSBuild@1
   inputs:
     solution: '**\DH.Helpdesk.Mail2Ticket.vbproj'
