--- a/Mail2Ticket.yml
+++ b/Mail2Ticket.yml
@@ -18,11 +18,12 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
+- task: NuGetToolInstaller@1
+
 - task: NuGetCommand@2
   inputs:
-    command: 'restore'
-    restoreSolution: '**/DH.Helpdesk.Mail2Ticket.vbproj'
-    feedsToUse: 'select'
+    restoreSolution: '**\DH.Helpdesk.Mail2Ticket.vbproj'
+
 - task: VSBuild@1
   inputs:
     solution: '**\DH.Helpdesk.Mail2Ticket.vbproj'
