--- a/Mail2Ticket.yml
+++ b/Mail2Ticket.yml
@@ -24,7 +24,7 @@ steps:
   displayName: dotnet restore
   inputs:
     command: restore
-    projects: '**/*.csproj'
+    projects: '**/*.*proj'
     includeNuGetOrg: true
     restoreDirectory: '$(build.artifactStagingDirectory)'
     
