--- a/Mail2Ticket.yml
+++ b/Mail2Ticket.yml
@@ -36,12 +36,12 @@ steps:
 #     restoreDirectory: '$(build.artifactStagingDirectory)'
 #     includeNuGetOrg: true
 
-- task: NuGetCommand@2
-  inputs:
-    command: 'restore'
-    restoreSolution: '**\dhHelpdesk_NG.Common\packages.config'
-    feedsToUse: 'select'
-    restoreDirectory: '$(build.artifactStagingDirectory)'
+# - task: NuGetCommand@2
+#   inputs:
+#     command: 'restore'
+#     restoreSolution: '**\dhHelpdesk_NG.Common\packages.config'
+#     feedsToUse: 'select'
+#     restoreDirectory: '$(build.artifactStagingDirectory)'
 - task: VSBuild@1
   inputs:
     solution: '**\DH.Helpdesk.Mail2Ticket.vbproj'
