--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: '**/DH.Helpdesk.Upkeeper.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
@@ -28,7 +28,3 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
