--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -20,7 +20,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'restore'
-    restoreSolution: '**\DH.Helpdesk.Upkeeper/packages.config'
+    PackagesDirectory: '**\DH.Helpdesk.Upkeeper\packages.config'
     includeNuGetOrg: true
 
 - task: VSBuild@1
