--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -20,8 +20,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'restore'
-    PackagesDirectory: '**\DH.Helpdesk.Upkeeper\packages.config'
-    includeNuGetOrg: true
+    PackagesDirectory: '$(solution)'
 
 - task: VSBuild@1
   inputs:
