--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,7 +19,8 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution:  '\DH.Helpdesk.Upkeeper\packages.config'
+    restoreSolution: '$(solution)'
+    #restoreSolution:  '\DH.Helpdesk.Upkeeper\packages.config'
 
 - task: VSBuild@1
   inputs:
