--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,7 +19,7 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution: '$(solution)'
+    restoreSolution: '**/DH.Helpdesk.Upkeeper/'
     #restoreSolution:  '\DH.Helpdesk.Upkeeper\packages.config'
 
 - task: VSBuild@1
