--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -25,8 +25,9 @@ steps:
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    #platform: '$(buildPlatform)'
+    #configuration: '$(buildConfiguration)'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true'
 
 
 - task: CopyFiles@2
