--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -12,7 +12,7 @@ pool:
 variables:
   solution: '**/DH.Helpdesk.Upkeeper/DH.Helpdesk.Upkeeper.csproj'
   buildPlatform: 'AnyCPU'
-  buildConfiguration: 'Release'
+  buildConfiguration: 'Build'
 
 steps:
 - task: NuGetToolInstaller@1
@@ -24,9 +24,9 @@ steps:
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
-    #platform: '$(buildPlatform)'
-    #configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+    #msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true'
 
 
 - task: CopyFiles@2
