--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -12,22 +12,21 @@ pool:
 variables:
   solution: '**/DH.Helpdesk.Upkeeper/DH.Helpdesk.Upkeeper.csproj'
   buildPlatform: 'AnyCPU'
-  buildConfiguration: 'Build'
+  buildConfiguration: 'Release'
 
 steps:
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution:  '\DH.Helpdesk.Upkeeper\packages.config'
+    restoreSolution:  '**/DH.Helpdesk.Upkeeper/packages.config'
 
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-    #msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true'
-
+   
 
 - task: CopyFiles@2
   inputs:
