--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -12,7 +12,7 @@ pool:
 variables:
   solution: '**/DH.Helpdesk.Upkeeper/DH.Helpdesk.Upkeeper.csproj'
   buildPlatform: 'AnyCPU'
-  buildConfiguration: 'Release'
+  buildConfiguration: 'Degug'
 
 steps:
 - task: NuGetToolInstaller@1
