--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,6 +19,7 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
+    command: restore
     #restoreSolution: '**\DH.Helpdesk.Upkeeper/packages.config'
     restoreSolution:  '\DH.Helpdesk.Upkeeper\packages.config'
 
