--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -20,8 +20,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: restore
-    #restoreSolution: '**\DH.Helpdesk.Upkeeper/packages.config'
-    restoreSolution:  '\DH.Helpdesk.Upkeeper\packages.config'
+    restoreSolution: '**\DH.Helpdesk.Upkeeper/packages.config'
 
 - task: VSBuild@1
   inputs:
