--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -29,8 +29,9 @@ steps:
    
 - task: VSBuild@1
   inputs:
-    solution: 'DH.Helpdesk.Upkeeper\DH.Helpdesk.Upkeeper.vbproj'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true'
+    solution: '$(solution)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
 
 - task: CopyFiles@2
   inputs:
