--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -22,7 +22,7 @@ steps:
     command: 'restore'
     restoreSolution: '$(solution)'
     feedsToUse: 'select'
-    restoreDirectory: 'DH.Helpdesk.Upkeeper'
+    restoreDirectory: ''
 
 # - task: NuGetCommand@2
 #   inputs:
