--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -21,8 +21,7 @@ steps:
   inputs:
     command: 'restore'
     restoreSolution: '$(solution)'
-    feedsToUse: 'select'
-    restoreDirectory: '**/DH.Helpdesk.Upkeeper/'
+    restoreDirectory: '**/DH.Helpdesk.Upkeeper'
 
 # - task: NuGetCommand@2
 #   inputs:
