--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,18 +19,7 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    command: 'restore'
-    restoreSolution: '$(solution)'
-
-# - task: NuGetCommand@2
-#   inputs:
-#     #restoreSolution: 'DH.Helpdesk.Upkeeper.csproj'
-
-# - task: VSBuild@1
-#   inputs:
-#     solution: '$(solution)'
-#     platform: '$(buildPlatform)'
-#     configuration: '$(buildConfiguration)'
+    restoreSolution: 'DH.Helpdesk.Upkeeper.csproj'
    
 - task: VSBuild@1
   inputs:
