--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,7 +19,7 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution: '**/DH.Helpdesk.Upkeeper.csproj'
+    restoreSolution: '$(solution)'
    
 - task: VSBuild@1
   inputs:
