--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,9 +19,11 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution: '**/DH.Helpdesk.Upkeeper/packages.config'
-    
-   
+    command: 'restore'
+    restoreSolution: '$(solution)'
+    feedsToUse: 'select'
+    vstsFeed: '1e2f294e-d4e3-4681-bb74-833f682abc75'
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
