--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -42,14 +42,17 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^3.2.1",
     "file-saver": "^2.0.2",
+    "jquery": "^3.6.1",
     "luxon": "^1.17.2",
     "msal": "^1.4.14",
     "ng2-file-upload": "^1.3.0",
     "ng2-pdf-viewer": "^5.3.3",
     "ngx-pinch-zoom": "^2.3.4",
+    "ngx-summernote": "^0.7.6",
     "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.2",
+    "summernote": "^0.8.20",
     "uuid": "^3.3.2",
     "zone.js": "^0.10.1"
   },
